# codam-webserv

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  a.out  cmake_install.cmake  compile_commands.json  http_request_test.cpp  parse_config.cpp  test.conf  test.cpp  test_request.txt  valid_request.txt  webserv
.github/workflows/: build.yml
buffer_class/: buffer.cpp  buffer_main.cpp
eval/: eval.conf
eval/default_root/: custom_404.html  index.html
eval/default_root/default_root_submap_wrong_index/: wrong_index.html
eval/intra/: intra.conf
eval/no_autoindex_root/: a_file.html
eval/only_post_root/: index.html
eval/php-file/: cookie_test.php  dark_mode.php  huh.php  infinite_loop.php  syntax_error.php  test.php  test.phtml  upload_test.php
eval/python-file/: infinite_loop.py  infinite_loop_with_output.py  python_post.py
eval/shell/: test.sh
eval/tmp/: post_to_python.html
eval/uploads/: deleteme.txt
include/: buffer.hpp  client.hpp  config.hpp  file_handler.hpp  http_message.hpp  http_request.hpp  http_response.hpp  logging.hpp  parse_config.hpp  path.hpp  server.hpp  session.hpp  util.hpp
include/async/: fd.hpp  in_file.hpp  input.hpp  io.hpp  output.hpp  pollarray.hpp  program.hpp  socket.hpp  socket_client.hpp
include/httpMessage/: cgi_message.hpp  http_message.hpp  http_request.hpp  http_response.hpp
lib/cpplog/: CMakeLists.txt  Makefile
lib/cpplog/include/: cpplog.hpp
lib/cpplog/src/: cpplog.cpp
lib/socket/: CMakeLists.txt
lib/socket/include/: Connection.hpp  FDQueue.hpp  FileDescriptor.hpp  Socket.hpp
lib/socket/src/: FDQueue.cpp  FileDescriptor.cpp  Socket.cpp
linux_container/: Dockerfile  docker-compose.yaml
nginx-test/: docker-compose.yml
nginx-test/conf/: default.conf  nginx copy.conf  nginx.conf
nginx-test/html/: 50x.html  index.html  index2.html  jelle.html  test_pdf
nginx-test/html/dir/: ava_test  index.html
nginx-test/proep/: hallo.htm
src/: buffer.cpp  client.cpp  config.cpp  config_extractors.cpp  config_insertions.cpp  file_handler.cpp  hello-world.cpp  http_message.cpp  http_request.cpp  http_response.cpp  logging.cpp  main.cpp  parse_config_extractor_overloads.cpp  parse_config_insertion_overloads.cpp  path.cpp  server.cpp  session.cpp  util.cpp
src/async/: fd.cpp  file.cpp  in_file.cpp  input.cpp  io.cpp  iofd.cpp  output.cpp  pollarray.cpp  program.cpp  socket.cpp  socket_client.cpp  socketclient.cpp
src/client/: client.cpp  client_build_response.cpp  client_callbacks.cpp  client_cgi_handling.cpp  client_file_handling.cpp  client_session.cpp  client_util.cpp
src/config/: config.cpp  config_extractors.cpp  config_insertions.cpp
src/httpMessage/: cgi_message.cpp  http_message.cpp  http_response.cpp
src/httpMessage/httpRequest/: getters_setters.cpp  helpers.cpp  http_request.cpp  parse.cpp  parse_body.cpp  parse_header.cpp
src/httpRequest/: getters_setters.cpp  helpers.cpp  http_request.cpp  parse.cpp  parse_body.cpp  parse_header.cpp
test/: CMakeLists.txt  post.html  test.conf  test.cpp  test_config.hpp  test_httpReq.hpp
webroot/: 403.html  413.html  bad_permission.txt  intra.conf  post_to_php.html  test.cpp  test.php  test_post.php  upload_test.php
webroot/123/: index.html  testpy.py
webroot/123/456/: index3.html
webroot/uploads/: test(16).php
